namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bobo

---
apiVersion: v1
kind: Namespace
metadata:
  name: mysql
