deployment-bobo.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    run: bobo
  name: bobo
spec:
  replicas: 2
  selector:
    matchLabels:
      run: bobo
  template:
    metadata:
      labels:
        run: bobo
    spec:
      containers:
      - image: quay.io/hahappyman/alp.goweb:v2
        name: myweb
        ports:
         - containerPort: 8080
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "cp -u -r /opt/web/* /opt/www/"]
        volumeMounts:
        - mountPath: /opt/www
          name: bobo-volume
      volumes:
      - name: bobo-volume
        persistentVolumeClaim:
          claimName: pvc-myfbs
---
apiVersion: v1
kind: Pod
metadata:
  name: fbs-bobo
  labels:
    run: fbs.bobo
spec:
  containers:
  - name: myfbs
    image: quay.io/hahappyman/alp.myfbs:latest
    imagePullPolicy: IfNotPresent
    ports:
     - containerPort: 4000
    volumeMounts:
    - mountPath: /srv
      name: myfbs-volume
  volumes:
  - name: myfbs-volume
    persistentVolumeClaim:
      claimName: pvc-myfbs
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: mydb
  name: mydb
spec:
  containers:
  - image: quay.io/cooloo9871/mydb
    name: mydb
    ports:
     - containerPort: 3306
    volumeMounts:
    - mountPath: /var/lib/mysql
      name: mysql-volume
  volumes:
  - name: mysql-volume
    persistentVolumeClaim:
      claimName: pvc-mysql
---
kind: Service
apiVersion: v1
metadata:
  name: svc-bobo
spec:
  selector:
    run: bobo
  ports:
  - port: 8080
    targetPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: svc-mydb
spec:
  selector:
    run: mydb
  ports:
  - port: 3306
    targetPort: 3306
---
kind: Service
apiVersion: v1
metadata:
  name: svc-fbs
spec:
  selector:
    run: fbs.bobo
  ports:
  - port: 4000
    targetPort: 4000
