svc-bobo.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc-bobo
  namespace: bobo
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    run: bobo
  ports:
  - port: 80
    targetPort: 8080
