svc-fbs.yaml
kind: Service
apiVersion: v1
metadata:
  name: fbssvc-bobo
  namespace: bobo
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    run: fbs.bobo
  ports:
  - port: 80
    targetPort: 9090
