ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bobo-ingress
  namespace: bobo
spec:
  ingressClassName: nginx
  rules:
  - host: bobo.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-bobo
            port:
              number: 80
